[package]
name = "ubiquity"
version = "0.1.0"
authors = ["Chris Chamberlain <c.chamberlain@iinet.net.au>"]
description = "n-directional file synchronization utility"
repository = "https://github.com/neon64/ubiquity"
readme = "README.md"
license = "MIT"

[dependencies]
fnv = "~1.0.2"
bincode = "~0.5.6"
serde = "~0.7"
serde_macros = "~0.7"
byteorder = "~0.5"
log = "~0.3.6"
regex = "~0.1.71"
fs2 = "~0.2.2"
#file-lock = { version = "0.0.17", features = ["unstable"] }
walkdir = "~0.1.5"
generic-array = "~0.3.0"
typenum = "~1.3.1"

[dev_dependencies]
env_logger = "*"