[package]
name = "ubiquity"
version = "0.1.5"
authors = ["Chris Chamberlain <c.chamberlain@iinet.net.au>"]
description = "n-directional file synchronization utility"
repository = "https://github.com/neon64/ubiquity"
readme = "README.md"
license = "MIT"

[dependencies]
fnv = "~1.0.2"
bincode = "~0.6.0"
serde = "0.8"
serde_derive = "0.8"
byteorder = "~0.5"
log = "~0.3.6"
regex = "~0.1"
fs2 = "~0.2.2"
walkdir = "~0.1.5"
generic-array = { version = "~0.5", features = ["serde"] }
typenum = "~1.3.1"

[dev_dependencies]
env_logger = "0.3.3"
