[package]
name = "ubiquity"
version = "0.2.0"
authors = ["Chris Chamberlain <chris@chamberlain.id.au>"]
description = "n-directional file synchronization utility"
repository = "https://github.com/neon64/ubiquity"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
fnv = "1.0.6"
bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"] }
byteorder = "1.3.4"
log = "0.4.8"
regex = "1.3.6"
fs2 = "0.4.3"
walkdir = "2.3.1"
generic-array = { version = "0.13.2", features = ["serde"] }
typenum = "1.11.2"

[dev_dependencies]
env_logger = "0.3.3"
